<resources>
    <string name="app_name">Vehicle Tracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="view_map">View Map</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="splash_image">splash image</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="back_to_login">Back to Login</string>
    <string name="email">Email</string>

</resources>
