<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.cardview.widget.CardView
                android:layout_width="180dp"
                android:layout_height="160dp"
                app:cardBackgroundColor="@color/colorPrimary"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:layout_margin="16dp"
                android:layout_weight="1">

            <Button
                    android:id="@+id/btnStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/colorPrimary"
                    android:layout_margin="16dp"
                    android:textColor="@color/colorWhite"
                    android:layout_gravity="center"
                    android:drawablePadding="8dp"
                    android:drawableTop="@drawable/ic_car"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/start_tracking"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
                android:layout_width="180dp"
                android:layout_height="160dp"
                app:cardBackgroundColor="@color/colorPrimary"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:layout_weight="1">


        <Button
                android:id="@+id/btnViewMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/ic_placeholder"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:text="@string/view_map"
                app:layout_constraintEnd_toEndOf="@+id/btnStart"
                app:layout_constraintStart_toStartOf="@+id/btnStart"
                app:layout_constraintTop_toBottomOf="@+id/btnStart" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="160dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            >


    <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/stop_tracking"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_street"
            android:foreground="?android:attr/selectableItemBackground"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@+id/btnStart"
            app:layout_constraintStart_toStartOf="@+id/btnStart"
            app:layout_constraintTop_toBottomOf="@+id/btnViewMap" />

    </androidx.cardview.widget.CardView>

</LinearLayout>